--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1125,3 +1125,44 @@ sm_civilian_shipyard_desc:0 "Produces energy sell ship at pop void dweller for e
  sm_Governmental_Orbital_Exchange_Market: "Orbital Exchange Market"
  sm_administrative_hub:0 "Orbital $building_low_tech_admin_hub$"
  sm_Governmental_diplomatic_asset:0 "Diplomatic Embassy"
+
+ decision_upgrade_habitat_3:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_3_effects:0 "Further upgrades this §H$habitat_1$§!, granting §Y2 Additional Districts§!."
+ decision_upgrade_habitat_3_effects_short:0 "Upgrades this Habitat"
+ decision_upgrade_habitat_3_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_4:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_4_effects:0 "Further upgrades this §H$habitat_1$§!, granting §Y2 Additional Districts§!."
+ decision_upgrade_habitat_4_effects_short:0 "Upgrades this Habitat"
+ decision_upgrade_habitat_4_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_5:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_5_effects:0 "Further upgrades this §H$habitat_1$§!, granting §Y2 Additional Districts§!."
+ decision_upgrade_habitat_5_effects_short:0 "Upgrades this Habitat"
+ decision_upgrade_habitat_5_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_6:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_6_effects:0 "Further upgrades this §H$habitat_1$§!, granting §Y2 Additional Districts§!."
+ decision_upgrade_habitat_6_effects_short:0 "Upgrades this Habitat"
+ decision_upgrade_habitat_6_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_7:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_7_effects:0 "Further upgrades this §H$habitat_1$§!, granting §Y2 Additional Districts§!."
+ decision_upgrade_habitat_7_effects_short:0 "Upgrades this Habitat"
+ decision_upgrade_habitat_7_desc:0 "$tech_habitat_3_desc$"
+
+ humiliated_phi:0 "Humiliate/Demilitarization"
+ humiliated_phi _desc:0 "§LWe were publicly humiliated by another Empire with demilitarization.§! effect: \n 
+$diplo_weight_mult$ §R-0.33§! \n
+$country_alloys_produces_mult$ §R-0.33§! \n
+$country_unity_produces_mult$ §R-0.33§! \n
+$country_naval_cap_mult$ §R-0.33§! "
+
+war_goal_wg_phi_war_reparation: "Pay War reparation"
+war_goal_wg_phi_war_reparation_desc: "Ask pay war reparation in energy credits!"
+has_criminal_branch_office_our:0 "§RWe have criminal branch office on Their§!"
+has_criminal_branch_office:0 "§RThey have criminal branch office on our§!"
+wars: "Wars"
+in_war : "Wars"
+mod_wars_influence_upkeep_mult: "Influence upkeep from wars"
+CRIMINAL_BRANCH_OFFICE_NOT_COMMERCIAL_PACT:1 "£trigger_no£ §RWe must NOT have a Commercial Pact with the owner of this planet in order to establish a $BRANCH_OFFICE$ here§!"
