--- a/localisation/italian/phi_l_italian.yml
+++ b/localisation/italian/phi_l_italian.yml
@@ -1182,3 +1182,28 @@ sm_curator_think_tank_effect:0 "Ricerca sulla società, l'ingegneria e la fisica
 sm_Governmental_Orbital_Exchange_Market: "Mercato di scambio orbitale"
 sm_administrative_hub:0 "$building_low_tech_admin_hub$ orbitale"
 sm_Governmental_diplomatic_asset:0 "Ambasciata diplomatica"
+
+ decision_upgrade_habitat_3:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_3_effects:0 "Ulteriori miglioramenti per questo §H$habitat_1$§!, che conferiscono §Y2 Additional Districts§!."
+ decision_upgrade_habitat_3_effects_short:0 "Migliora questo Habitat"
+ decision_upgrade_habitat_3_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_4:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_4_effects:0 "Ulteriori miglioramenti per questo §H$habitat_1$§!, che conferiscono §Y2 Additional Districts§!."
+ decision_upgrade_habitat_4_effects_short:0 "Migliora questo Habitat"
+ decision_upgrade_habitat_4_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_5:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_5_effects:0 "Ulteriori miglioramenti per questo §H$habitat_1$§!, che conferiscono §Y2 Additional Districts§!."
+ decision_upgrade_habitat_5_effects_short:0 "Migliora questo Habitat"
+ decision_upgrade_habitat_5_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_6:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_6_effects:0 "Ulteriori miglioramenti per questo §H$habitat_1$§!, che conferiscono §Y2 Additional Districts§!."
+ decision_upgrade_habitat_6_effects_short:0 "Migliora questo Habitat"
+ decision_upgrade_habitat_6_desc:0 "$tech_habitat_3_desc$"
+
+ decision_upgrade_habitat_7:0 "$decision_upgrade_habitat$"
+ decision_upgrade_habitat_7_effects:0 "Ulteriori miglioramenti per questo §H$habitat_1$§!, che conferiscono §Y3 Additional Districts§!."
+ decision_upgrade_habitat_7_effects_short:0 "Migliora questo Habitat"
+ decision_upgrade_habitat_7_desc:0 "$tech_habitat_3_desc$"
