Politiche, abbassato costo guerra da 1 a 0.5 e fix casus bellis sopratutto per ai

--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1032,10 +1032,10 @@ OFFSPRING_CORVETTE_MID_S4:0 "$CORVETTE_MID_S4$"
   
 casus_belli_FW_cb_border:0 "Border closed"
  war_goal_FW_wg_open_border: "Open border"
- war_goal_FW_wg_open_border_desc: "Start a war to open the borders of hostile civilization and obtain 20 years of right of passage.\n\nEnemy §Gcan't§! set survive war, §Rcan't§! get claim!"
+ war_goal_FW_wg_open_border_desc: "Start a war to open the borders of hostile civilization and obtain 20 years of right of passage.\n\nEnemy §Gcan't§! set survive war, you §Rcan't§! get claim!"
  z_fw_open_border_tooltip:0 "§Y[From.GetName]§! has been defeated, they put down their arrogance and agreed to open the border to us within §Y20§! years.\n§Y[Root.GetName]§! has gained §G+100§! £influence£\n"
  war_goal_FW_wg_open_border_long: "Long Open border"
- war_goal_FW_wg_open_border_long_desc: "Start a war to open the borders of hostile civilizations, gain 50 years of right of way and end the competition.\n\nEnemy §Gcan't§! set survive war, §Rcan't§! get claim!"
+ war_goal_FW_wg_open_border_long_desc: "Start a war to open the borders of hostile civilizations, gain 50 years of right of way and end the competition.\n\nEnemy §Gcan't§! set survive war, you §Rcan't§! get claim!"
  z_fw_open_border_long_tooltip:0 "§Y[From.GetName]§! has been completely defeated, they had to put down their arrogance and agreed to open the border to us within §Y50§!. At the same time, we also ended the state of rivals with them, but obviously they did not agree with this result and would strike back one day in the future.\n§Y[Root.GetName]§! has gained §G+150§! £influence£\n"
  z_fw_opinion_wg_open_boder_long:0 "Be rampant in our territory"
 
@@ -1166,3 +1166,15 @@ wars: "Wars"
 in_war : "Wars"
 mod_wars_influence_upkeep_mult: "Influence upkeep from wars"
 CRIMINAL_BRANCH_OFFICE_NOT_COMMERCIAL_PACT:1 "£trigger_no£ §RWe must NOT have a Commercial Pact with the owner of this planet in order to establish a $BRANCH_OFFICE$ here§!"
+
+wg_phi_war_rep_accept_us:0 "§Y[Root.GetName]§! gains for every pop of §Y[From.GetName]§! : \n§G+150§! £energy£ and §Y[From.GetName]§! for 10 years will have -40% energy credits\n\nYou §Rcan't§! get claim!"
+casus_belli_cb_phi_war_reparation:0 "War reparation"
+
+policy_research_lab_focus:0 "$district_hab_science$ focus"
+policy_research_lab_focus_desc:1 "Can focus research on $district_hab_science$"
+focus_physics:0 "Focus physics"
+focus_physics_name:0 "Focus physics $district_hab_science$"
+focus_physics_desc:0 "Add 1 physic job at $district_hab_science$"
+focus_engineering:0 "Focus engineering"
+focus_engineering_name:0 "Focus engineering $district_hab_science$"
+focus_engineering_desc:0 "Add 1 engineering job at $district_hab_science$"
