--- a/localisation/english/phi_l_english.yml
+++ b/localisation/english/phi_l_english.yml
@@ -1178,3 +1178,40 @@ focus_physics_desc:0 "Add 1 physic job at $district_hab_science$"
 focus_engineering:0 "Focus engineering"
 focus_engineering_name:0 "Focus engineering $district_hab_science$"
 focus_engineering_desc:0 "Add 1 engineering job at $district_hab_science$"
+
+phi_requires_neutral_opinion_or_supremacist:1 "$TRIGGER_FAIL$§RRequires $OPINION_NEUTRAL$ or below of you or all federation member, or one empire must either be in the $diplo_stance_full_scale_mobilization$ $DIPLOMACY_STANCE$ or be a §H$COUNTRY_FALLEN_EMPIRE$§!.§!\n"
+phi_requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_GOOD$.§! of you or 1 federation member"
+ ACTION_FORCE_DECLARE_WAR:0 "Force Declare War"
+ ACTION_FORCE_DECLARE_WAR_DESC:0 "Declare War at our "friend" on with malus."
+edict_Force_declare_war: "Force declare war"
+edict_Force_declare_war_desc: "War is fought by all means. Declare War at our "friend" on with malus."
+ edict_tooltip_Force_declare_war_effects:0 "§H[Root.GetName]§! wishes to declare war against country with harming relation \n\n §H[Root.GetName]§! Spend 100 influence, §R100%§! war_exhauston, +25% attractive militarist ethic,§R100%§! cost of war and §R-25%§! §YDiplomatic weight§! for 10 years"
+phi_force_war: "Forced war"
+phi_lost_war_ship: "Lost war, bonus rebuild ship"
+phi_lost_war_building: "Lost war, bonus rebuild building"
+phi_lost_war_pop: "Lost war, bonus growthed pop"
+phi_fleet_bonus: "Community Galactic subsidy fleet"
+phi_tech_bonus: "Community Galactic subsidy tech"
+phi_economy_bonus: "Community Galactic subsidy economy"
+galactic_community_upkeep:0 "$galactic_community$ upkeep"
+phi_empire_size_over_TITLE:0 "Your empire in over size!"
+phi_empire_size_over_expansion_planer_MESSAGE:0 "Use your £influence£ for activate edict $edict_expansion_planer$"
+phi_empire_size_over_tip_MESSAGE:0 "Your empire is in over size, set $diplo_economic_policy$ in $economic_policy_expansion$ or try save £influence£ for activate edict $economic_policy_adaptability$"
+phi_empire_size_over_MESSAGE:0 "Your empire is in over size, This will give you huge disadvantages.\n
+Try create vassal with decision in planet or search tech for administrative capacity,below empire size etc..."
+ap_voidborn_void_dweller:0 "$ap_voidborn$"
+ap_voidborn_dweller_habitat_effect:0 "$ap_voidborn_habitat_effect$\n\nAll Starbase buildings with cost influence, add 1 work job at planet in system in base at starbase building type"
+sm_Governmental_manager_asset:0 "Manager great hall"
+Research_relic:0 "Minor artifact lab"
+#materialist_federation:0 "$materialist_federation$"
+materialist_federation_NOT_materialist:0 "$materialist_federation$"
+materialist_federation_DESC:0 "Being a member of a $materialist_federation$ will please the [Root.GetName]."
+#pacifist_federation:0 "$pacifist_federation$"
+pacifist_federation_NOT_materialist:0 "$pacifist_federation$"
+pacifist_federation_DESC:0 "Being a member of a $pacifist_federation$ will please the [Root.GetName]."
+#militarist_federation:0 "$militarist_federation$"
+militarist_federation_NOT_militarist:0 "$militarist_federation$"
+militarist_federation_DESC:0 "Being a member of a $militarist_federation$ will please the [Root.GetName]."
+egalitarian_federation_NOT_egalitarian:0 "$egalitarian_federation$"
+egalitarian_federation_DESC:0 "Being a member of a $egalitarian_federation$ will please the [Root.GetName]."
+mod_stations_minor_artifacts_produces_mult: "Minor artifacts Station Output"
